Draft to fix overflow problem

--- a/extensions/amp-list/0.1/amp-list.css
+++ b/extensions/amp-list/0.1/amp-list.css
@@ -46,6 +46,11 @@ amp-list[load-more] [load-more-button].i-amphtml-default-ui,
   text-align: center;
 }
 
+[load-more-button].i-amphtml-list-load-more-overflow.i-amphtml-default-ui {
+  position: absolute;
+  bottom: 0;
+}
+
 amp-list[load-more] [load-more-loading].i-amphtml-default-ui .i-amphtml-list-load-more-spinner {
   display: inline-block;
   width: 40px;
